fixed grid on mobile screens

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -48,6 +48,11 @@
     }
 }
 
+.gallery {
+    grid-template-columns: 1fr;
+    grid-template-rows: repeat(6, 400px);
+}
+
 @media screen and (min-width: 768px) {
     .gallery {
         grid-template-columns: repeat(10, 1fr) 1.5fr 1.5fr;
@@ -57,7 +62,6 @@
     .destination-grid0 {
         grid-column: 1 / span 10;
         grid-row: 1 / span 5;
-        justify-self: stretch;
     }
 
     .destination-grid1 {
